# huff-encoding

./: .gitignore  .travis.yml  Cargo.toml  README.md  test
huff/: Cargo.toml  README.md
huff/res/: cli.yml
huff/src/: cli.rs  comp.rs  error.rs  lib.rs  main.rs  utils.rs
huff_coding/: Cargo.toml  README.md
huff_coding/src/: branch.rs  branch_heap.rs  cmpr.rs  comp.rs  dcmpr.rs  file.rs  freqs.rs  leaf.rs  letter.rs  lib.rs  prelude.rs  tree.rs  utils.rs  weights.rs
huff_coding/src/tree/: bits.rs  branch.rs  branch_heap.rs  leaf.rs  letter.rs  mod.rs  tree.rs  tree_inner.rs
huff_coding/tests/: comp_decomp.rs  tree_bin.rs  tree_init.rs
src/: cli.rs  file.rs  file_io.rs  file_rw.rs  huf_code.rs  huff_code.rs  huff_structs.rs  lib.rs  main.rs  utils.rs
src/huff_structs/: branch.rs  branch_heap.rs  branch_vec.rs  code.rs  freqs.rs  leaf.rs  leaf_vec.rs  mod.rs  tree.rs
src/structs/: branch.rs  branch_heap.rs  freqs.rs  leaf.rs  mod.rs  tree.rs
tests/: file_test.rs  file_tests.rs  huff_structs_tests.rs
