[package]
name = "huff_encoding"
version = "0.0.9"
authors = ["Łukasz Dragon <lukasz.b.dragon@gmail.com>"]
edition = "2018"

[lib]
name = "huff_encoding"
path = "src/lib.rs"

[[bin]]
name = "huff"
path = "src/main.rs"


[dependencies]
bitvec = "0.19.4"   # TODO: make it myself?
num_cpus = "1.13"
structopt = "0.3.20"
