[package]
name = "huff"
description = "Example compression/decompression CLI software based on the huff_coding crate"
version = "1.0.0"
authors = ["Łukasz Dragon <lukasz.b.dragon@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
repository = "https://github.com/kxlsx/huffman-coding-rs/tree/master/huff"

[dependencies]
huff_coding = {path = "../huff_coding"}
clap = {version = "2.33.3", features = ["yaml"]}
