[package]
name = "huff_coding"
description = "An implementation of the Huffman coding algorithm, enabling one to create a Huffman tree with any alphabet they choose."
version = "0.0.1"
authors = ["Łukasz Dragon <lukasz.b.dragon@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/huff_coding/0.0.1/huff_coding/"
repository = "https://github.com/kxlsx/huffman-coding-rs/tree/master/huff_coding"
readme = "./README.md"
keywords = [
    "huffman_coding", 
    "compression", 
    "decompression"
]

[dependencies]
bitvec = "0.20.1"
